Adds fonts and some basic defaults.

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@ layout: default
 ---
 
 <div class="home">
-  Lorem ipsum
+  <h1 class="uk-margin-large-top">Cameron Hurd</h1>
+  <p class="subtitle uk-text-muted">Building websites since grade 2.</p>
 </div>
