Adds menu styles for mobile, etc.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
-layout: default
+title:     Cameron Hurd
+subtitle:  Building websites since grade 2.
+layout:    default
 ---
 
 <div class="home">
-  <h1 class="uk-margin-large-top">Cameron Hurd</h1>
-  <p class="subtitle uk-text-muted">Building websites since grade 2.</p>
 </div>
